Bloch-McConnell Numerical Solution (BMNS)
Feb 29 2016
************
!!! Note: Scipy >= v0.17 must be installed !!! (use: sudo pip install --upgrade scipy)
!!! Note: Pandas must be installed !!! (use: sudo pip install pandas)

- Different fit models of the same data can be compared statistically using the command:
	>BMNS -compare [List of model CSVs]
- Changed local fitting function from "Least Squares Bound", to Scipy's new "Least Squares" function that has better bounding conditions.
- Changed standard error estimation procedure: standard error now calculated using fit Jacobian matrix, fit residuals, and degrees of freedom.
- Changed the way dG12 and dG12 are calculated using the '-thermo' option. Results are consistent with the previous method.
  This change was made to ensure both dG12 and dG13 could be calculated when the unusual linear GS<>ES1<>ES2 3-state fit is used,
  as previously, calculation of dG12 and dG13 used the individual rate constants instead of pES1 or pES2
- Local and global parameter fits now generate and export more statistical measures and goodness-of-fit parameters.
  These parameters include:
  o Akaike's Information Criterion (AIC)
  o Bayesian Information Criterion (BIC)
  o Standard deviation of the model residuals
  o R-squared
  o Adjusted R-squared
  o Chi-square (as well as reduced chi-square)
  o Residual Sum of Squares
  o Total Sum of Squares
  They can be found in the "Local" and "Polished" folders under "Stats"
- Fit matrices generated by the non-linear least squares fits are now saved locally, including:
  o Fit residuals
  o Jacobian matrix
  o Covariance matrix
  o Correlation matrix
	
Fit Model Comparison Example
----------------------------------------

>BMNS -compare Model1.csv Model2.csv Model3.csv

------ AIC Tests ------
o Model #1 is FAVORED.
  - AIC = -48.1421777115
  - Model probability = 0.987496061266
o Model #2 is DISFAVORED.
  - AIC = 240.353598068
  - Model probability = 2.2308667745e-63